--- a/1746-JavaScript-parte1-aula0/index.html
+++ b/1746-JavaScript-parte1-aula0/index.html
@@ -29,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabla-pacientes">
-						<tr class="paciente" id="primer-paciente">
+						<tr class="paciente">
 							<td class="info-nombre">Pablo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -39,7 +39,7 @@
 
 						<tr class="paciente" >
 							<td class="info-nombre">Juan</td>
-							<td class="info-peso">80</td>
+							<td class="info-peso">1000</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
@@ -48,7 +48,7 @@
 						<tr class="paciente" >
 							<td class="info-nombre">Erica</td>
 							<td class="info-peso">54</td>
-							<td class="info-altura">1.64</td>
+							<td class="info-altura">3.64</td>
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
 						</tr>
