--- a/1746-JavaScript-parte1-aula0/index.html
+++ b/1746-JavaScript-parte1-aula0/index.html
@@ -91,7 +91,7 @@
 
 	<section class="container">
 		<h2 id="titulo-form">Adicionar nuevo paciente</h2>
-		<form>
+		<form id="form-adicionar">
 			<div class="grupo">
 				<label for="nombre">Nombre:</label>
 				<input id="nombre" name="nombre" type="text" placeholder="digite el nombre del paciente" class="campo">
@@ -112,7 +112,8 @@
 		</form>
 	</section>
 
-	<script src="js/principal.js"></script>
+	<script src="js/calcular-imc.js"></script>
+	<script src="js/form.js"></script>
 
 </body>
 
