--- a/1746-JavaScript-parte1-aula0/index.html
+++ b/1746-JavaScript-parte1-aula0/index.html
@@ -20,6 +20,8 @@
 	<main>
 		<section class="container">
 			<h2>Mis pacientes</h2>
+			<label for="filtrar-tabla"></label>
+			<input type="text" name="filtro" id="filtrar-tabla" placeholder="Digite el nombre del paciente">
 			<table>
 				<thead>
 					<tr>
@@ -41,7 +43,7 @@
 
 					<tr class="paciente">
 						<td class="info-nombre">Juan</td>
-						<td class="info-peso">73</td>
+						<td class="info-peso">71</td>
 						<td class="info-altura">1.72</td>
 						<td class="info-gordura">40</td>
 						<td class="info-imc">0</td>
@@ -85,12 +87,15 @@
 					</tr>
 				</tbody>
 			</table>
+			<span id="error-ajax" class="invisible">Error al buscar los archivos</span>
+			<button id="buscar-paciente" class="boton bto-principal" >Buscar Paciente</button>
 
 		</section>
 	</main>
 
 	<section class="container">
 		<h2 id="titulo-form">Adicionar nuevo paciente</h2>
+		<ul id="mensajes-errores"></ul>
 		<form id="form-adicionar">
 			<div class="grupo">
 				<label for="nombre">Nombre:</label>
@@ -114,6 +119,9 @@
 
 	<script src="js/calcular-imc.js"></script>
 	<script src="js/form.js"></script>
+	<script src="js/eliminar-paciente.js"></script>
+	<script src="js/filtrar.js"></script>
+	<script src="js/buscar-paciente.js"></script>
 
 </body>
 
